db-kafka.yaml
# infrastructure.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  ports:
    - port: 9092
      name: internal
    - port: 29093
      name: controller
  selector:
    app: kafka
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
spec:
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      enableServiceLinks: false
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.4.0
          readinessProbe: # Kubernetes controllerà questo prima di mandare traffico
            tcpSocket: # <--- Cambia exec in tcpSocket
              port: 9092     # <--- Controlla solo se la porta risponde
            initialDelaySeconds: 15
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: datadb
spec:
  ports:
    - port: 3306
  selector:
    app: datadb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datadb
spec:
  selector:
    matchLabels:
      app: datadb
  template:
    metadata:
      labels:
        app: datadb
        network: data-net
    spec:
      containers:
        - name: mysql
          image: mysql:latest
---
apiVersion: v1
kind: Service
metadata:
  name: userdb
spec:
  ports:
    - port: 3306
  selector:
    app: userdb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userdb
spec:
  selector:
    matchLabels:
      app: userdb
  template:
    metadata:
      labels:
        app: userdb
        network: user-net
    spec:
      containers:
        - name: mysql
          image: mysql:latest
