microservices.yaml
# --- USER MANAGER (gRPC Server) ---
apiVersion: v1
kind: Service
metadata:
  name: usermanager
spec:
  selector:
    app: usermanager
  ports:
    - name: grpc
      port: 50051
      targetPort: 50051
    - name: http
      port: 5000
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usermanager
spec:
  selector:
    matchLabels:
      app: usermanager
  template:
    metadata:
      labels:
        app: usermanager
        network: user-net
    spec:
      containers:
        - name: usermanager
          image: usermanager:v1 # Immagine caricata manualmente
          imagePullPolicy: Never    # Importante per usare immagini locali di Kind
---
apiVersion: v1
kind: Service
metadata:
  name: datacollector
spec:
  selector:
    app: datacollector
  ports:
    - name: http
      port: 5000        # Porta esposta al cluster
      targetPort: 5000  # Porta su cui ascolta l'app Flask/Python interna
    - name: metrics
      port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datacollector
spec:
  selector:
    matchLabels:
      app: datacollector
  template:
    metadata:
      labels:
        app: datacollector
        network: data-net
    spec:
      containers:
        - name: datacollector
          image: datacollector:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
            - containerPort: 8000
# --- ALERT SYSTEM ---
---
apiVersion: v1
kind: Service
metadata:
  name: alertsystem
spec:
  selector:
    app: alertsystem
  ports:
    - name: http
      port: 5000
      targetPort: 5000
    - name: metrics
      port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertsystem
spec:
  selector:
    matchLabels:
      app: alertsystem
  template:
    metadata:
      labels:
        app: alertsystem
        network: data-net
    spec:
      containers:
        - name: alertsystem
          image: alertsystem:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
            - containerPort: 8000
# --- ALERT NOTIFIER ---
---
apiVersion: v1
kind: Service
metadata:
  name: alertnotifier
spec:
  selector:
    app: alertnotifier
  ports:
    - name: http
      port: 5000
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertnotifier
spec:
  selector:
    matchLabels:
      app: alertnotifier
  template:
    metadata:
      labels:
        app: alertnotifier
        network: data-net
    spec:
      containers:
        - name: alertnotifier
          image: alertnotifier:v1
          imagePullPolicy: Never
